// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correcly 1`] = `
"<!-- Generated by solve-dynamo-spec.js. Update this documentation by updating the spec-v1.json file. -->

# Solve API DynamoDB Spec  ![](https://img.shields.io/badge/version-undefined-orange.svg \\"Version undefined\\")

Documentation for the DynamoDB table

## Table of Contents

-   [Table Spec](#table-spec)
-   [Access Patterns](#access-patterns)
    -   [Get user profile info](#get-user-profile-info)
    -   [Get user available episodes](#get-user-available-episodes)
-   [Indexes](#indexes)
    -   [Main](#main)
-   [Author](#author)

## Table Spec

<details>

<summary>Params to create the table using the CLI or the AWS SDK:</summary>

\`\`\`json
{
  \\"AttributeDefinitions\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"AttributeType\\": \\"S\\"
    }
  ],
  \\"TableName\\": \\"solveless-api\\",
  \\"KeySchema\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"KeyType\\": \\"HASH\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"KeyType\\": \\"RANGE\\"
    }
  ],
  \\"ProvisionedThroughput\\": {
    \\"ReadCapacityUnits\\": 5,
    \\"WriteCapacityUnits\\": 5
  },
  \\"BillingMode\\": \\"PAY_PER_REQUEST\\"
}
\`\`\`

</details>

\`createTable\` Using the CLI:

\`\`\`bash
$ aws dynamodb create-table --table-name solveless-api --cli-input-json create-table.json
\`\`\`

Using the AWS SDK:

\`\`\`javascript
const DynamoDB = require(\\"aws-sdk/clients/dynamodb\\");

const service = new DynamoDB({ region: process.env.AWS_REGION });

service.createTable(tableJson, (err, data) => {
  console.log(data);
});

\`\`\`

## Access Patterns

### Get user profile info

_coming soon_

### Get user available episodes

_coming soon_

## Indexes

### Main

| pk (HASH) | sk (RANGE)         |                             |                   |                              |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ---------------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65          | **profile:** \`{\\"avatar\\":\\"https://... }\` |
| user-6549 | episode:available  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |                                         |

## Author

Spec authored by undefined and generated by [dynamodb-spec-generator](https://github.com/ericallam/dynamodb-spec-generator \\"DynamoDB Spec Generator\\")
"
`;

exports[`renders sparse indexes correcly 1`] = `
"<!-- Generated by solve-dynamo-spec.js. Update this documentation by updating the spec-v1.json file. -->

# Solve API DynamoDB Spec  ![](https://img.shields.io/badge/version-undefined-orange.svg \\"Version undefined\\")

Documentation for the DynamoDB table

## Table of Contents

-   [Table Spec](#table-spec)
-   [Access Patterns](#access-patterns)
    -   [Get user profile info](#get-user-profile-info)
    -   [Get user available episodes](#get-user-available-episodes)
-   [Indexes](#indexes)
    -   [Main](#main)
    -   [Gsi1](#gsi1)
-   [Author](#author)

## Table Spec

<details>

<summary>Params to create the table using the CLI or the AWS SDK:</summary>

\`\`\`json
{
  \\"AttributeDefinitions\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"AttributeType\\": \\"S\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"AttributeType\\": \\"S\\"
    }
  ],
  \\"TableName\\": \\"solveless-api\\",
  \\"KeySchema\\": [
    {
      \\"AttributeName\\": \\"pk\\",
      \\"KeyType\\": \\"HASH\\"
    },
    {
      \\"AttributeName\\": \\"sk\\",
      \\"KeyType\\": \\"RANGE\\"
    }
  ],
  \\"ProvisionedThroughput\\": {
    \\"ReadCapacityUnits\\": 5,
    \\"WriteCapacityUnits\\": 5
  },
  \\"BillingMode\\": \\"PAY_PER_REQUEST\\"
}
\`\`\`

</details>

\`createTable\` Using the CLI:

\`\`\`bash
$ aws dynamodb create-table --table-name solveless-api --cli-input-json create-table.json
\`\`\`

Using the AWS SDK:

\`\`\`javascript
const DynamoDB = require(\\"aws-sdk/clients/dynamodb\\");

const service = new DynamoDB({ region: process.env.AWS_REGION });

service.createTable(tableJson, (err, data) => {
  console.log(data);
});

\`\`\`

## Access Patterns

### Get user profile info

_coming soon_

### Get user available episodes

_coming soon_

## Indexes

### Main

| pk (HASH) | sk (RANGE)         |                             |                   |                              |                                         |
| --------- | ------------------ | --------------------------- | ----------------- | ---------------------------- | --------------------------------------- |
| user-6549 | metadata:user-6549 | **currentPoints:** 87       | **winCount:** 54  | **playedCount:** 65          | **profile:** \`{\\"avatar\\":\\"https://... }\` |
| user-6549 | episode:available  | **releaseDate:** 01-01-2019 | **status:** READY | **title:** The Mafia Problem |                                         |

### Gsi1

| status (HASH) | sk (RANGE)        |                   |                             |                              |
| ------------- | ----------------- | ----------------- | --------------------------- | ---------------------------- |
| READY         | episode:available | **pk:** user-6549 | **releaseDate:** 01-01-2019 | **title:** The Mafia Problem |

## Author

Spec authored by undefined and generated by [dynamodb-spec-generator](https://github.com/ericallam/dynamodb-spec-generator \\"DynamoDB Spec Generator\\")
"
`;
